--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.0.1"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 19
     }
 
@@ -18,6 +18,10 @@ android {
 }
 
 dependencies {
+    repositories {
+        mavenCentral()
+    }
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
     compile 'com.android.support:appcompat-v7:+'
     compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
     compile files('libs/android-async-http-1.4.3.jar')
