--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,14 @@ android {
 }
 
 dependencies {
+    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:support-v4:19.+'
     repositories {
         mavenCentral()
     }
-    compile 'com.github.chrisbanes.actionbarpulltorefresh:library:+'
-    compile 'com.android.support:appcompat-v7:+'
+    
+    
     compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
     compile files('libs/android-async-http-1.4.3.jar')
     compile files('libs/codepath-oauth-0.3.0.jar')
